--- a/clover/src/app/app.component.html
+++ b/clover/src/app/app.component.html
@@ -26,7 +26,7 @@
     </ul>
     <form class="form-inline">
       <div class="md-form my-0" style="margin-left: 750px;">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
       </div>
     </form>
   </div>
