--- a/clover/src/app/components/add-about-company/add-about-company.component.css
+++ b/clover/src/app/components/add-about-company/add-about-company.component.css
@@ -25,3 +25,10 @@
     position: absolute;
     left: 35%;
   }
+  div.validation-error{
+    width: 100%;
+    margin-top: .25rem;
+    margin-left: 32%;
+    font-size: 80%;
+    color: rgb(235, 35, 0);
+  }
