--- a/clover/src/app/components/payment/payment.component.html
+++ b/clover/src/app/components/payment/payment.component.html
@@ -1,4 +1,4 @@
-<body>
+ <body>
      <div class="bg">
 
 
@@ -16,7 +16,7 @@
                 </div>
               
 
-                <button *ngIf="dalijeadmin()" (click)="onButtonClick($event)" class="myButton2" (click)="finalPay()">Pay flight </button>
+                <button (click)="onButtonClick($event)" class="myButton2" (click)="finalPay()">Pay flight </button>
                 <button *ngIf="dalijeadmin()" class="myButton2" (click)="removeSeat()">Remove seat </button>
                 <button class="myButton2" (click)="inviteFriend()">Invite a friend </button>
 
