--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -8,8 +8,7 @@
         <div class="white-text text-md-left" style="width: 500px; margin-top: 100px;"> 
             <h1 class="text h1-responsive font-weight-bold wow fadeInLeft" data-wow-delay="0.3s">Sign up right now! </h1>
             <hr class="hr-light wow fadeInLeft" data-wow-delay="0.3s">
-            <h6 class="text mb-3 wow fadeInLeft" data-wow-delay="0.3s">Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
-                Text Text Text Text Text Text Text Text Text Text Text Text </h6>
+            <h6 class="text mb-3 wow fadeInLeft" data-wow-delay="0.3s">NAJBOLJI SAJT ZA REZERVACIJU LETOVA I AUTOMOBILA </h6>
             <a class="btn btn-outline-white wow fadeInLeft" data-wow-delay="0.3s" routerLink="/pomocna">Learn more</a>
         </div>
     </div>
